--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #333; /* Dark background */
+      color: #f4f4f4; /* Light text color */
       margin: 0;
       padding: 0;
       text-align: center;
     }
     h1 {
-      background-color: #333;
-      color: white;
+      background-color: #f4f4f4; /* Light background for header */
+      color: #333; /* Dark text for header */
       padding: 20px;
       margin: 0;
     }
@@ -23,15 +24,21 @@
       font-size: 16px;
       width: 70%;
       margin-top: 20px;
+      background-color: #555; /* Dark background for input */
+      color: #f4f4f4; /* Light text inside input */
+      border: 1px solid #888; /* Slight border for input */
     }
     button {
       padding: 10px 15px;
       font-size: 16px;
       cursor: pointer;
-      background-color: #333;
-      color: white;
+      background-color: #f4f4f4; /* Light background for buttons */
+      color: #333; /* Dark text for buttons */
       border: none;
       margin-left: 10px;
+    }
+    button:hover {
+      background-color: #ccc; /* Light gray hover effect */
     }
     .results {
       display: flex;
@@ -53,16 +60,20 @@
     .movie p {
       margin-top: 10px;
       font-weight: bold;
+      color: #f4f4f4; /* Light text for movie titles */
     }
     #backButton {
       position: absolute;
       top: 20px;
       left: 20px;
       padding: 10px 15px;
-      background-color: #333;
-      color: white;
+      background-color: #f4f4f4; /* Light background for back button */
+      color: #333; /* Dark text for back button */
       border: none;
       cursor: pointer;
+    }
+    #backButton:hover {
+      background-color: #ccc; /* Light gray hover effect */
     }
     #videoContainer {
       margin-top: 20px;
